# cocommit

./: .gitignore  README.md  pyproject.toml  pytest.ini
cocommit/: bedrock.py  cli_ui.py  cocommit.py  git_utils.py  llm_caller.py  response_utils.py  shortcuts.py
cocommit/llm_prompts/: prompt.llm
docs/: CONTRIBUTING.md  cocommit-v2.md
tests/: test_add.py  test_cocommit.py  test_prompt_utils.py  test_response_utils.py  test_shortcuts.py
tests/parser/: test_llm_reply.py  test_response_utils.py
