[project]
name = "cocommit"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Romanenco"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "gitpython (>=3.1.44,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cocommit = "cocommit.cocommit:main"
